--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                     <div class="grid md:grid-cols-2 gap-8 text-left">
                         <div class="stat-card transform hover:scale-105 transition-transform duration-300">
                              <h3 class="text-2xl font-bold text-gray-800">Option 1: Flat Annual Fee</h3>
-                             <p class="mt-4 text-4xl font-extrabold text-indigo-600">₹8L - ₹20L / year</p>
-                             <p class="text-gray-500">($9,600 - $24,000)</p>
+                             <p class="mt-4 text-4xl font-extrabold text-indigo-600">₹9L - ₹14L / year</p>
+                             <p class="text-gray-500">($10,000 - $16,000)</p>
                              <div class="mt-4 bg-indigo-100 text-indigo-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded-full">
                                 <i data-lucide="check-circle" class="w-4 h-4 mr-1.5"></i>
                                 Simple, predictable pricing for the institution.
@@ -264,7 +264,7 @@
                         <div class="stat-card transform hover:scale-105 transition-transform duration-300">
                              <h3 class="text-2xl font-bold text-gray-800">Option 2: Per-Student Model</h3>
                              <p class="mt-4 text-4xl font-extrabold text-teal-600">₹250 - ₹500 / student</p>
-                             <p class="text-gray-500">Total: ~₹12.5L / year ($15,000)</p>
+                             <p class="text-gray-500">Total: ~₹12.5L / year considering 5000 students opt for it...</p>
                              <div class="mt-4 bg-teal-100 text-teal-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded-full">
                                  <i data-lucide="check-circle" class="w-4 h-4 mr-1.5"></i>
                                 Scales with the size of the student body.
