--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             color: #1f2937;
         }
         .swiper-button-next, .swiper-button-prev {
-            color: #ffffff;
-            background-color: rgba(0, 0, 0, 0.3);
+            color: #403C3B;
             border-radius: 50%;
             width: 50px;
             height: 50px;
