--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
             </div>
 <!--
-            <!-- Slide 7: Calculating the Costs: Technology Investment -->
+            Slide 7: Calculating the Costs: Technology Investment
             <div class="swiper-slide bg-gray-800 text-white">
                 <div class="slide-content">
                     <h2 class="text-5xl font-extrabold">Estimated Monthly Tech Costs</h2>
@@ -244,9 +244,8 @@
                     </div>
                 </div>
             </div>
--->
-<!--
-            <!-- Slide 8: Business Model: Pricing for Colleges -->
+
+             Slide 8: Business Model: Pricing for Colleges 
             <div class="swiper-slide bg-gray-50">
                 <div class="slide-content">
                     <h2 class="slide-title">Creating a Win-Win for Students & Institutions</h2>
