--- a/index.html
+++ b/index.html
@@ -216,6 +216,17 @@
                     <p class="text-sm text-gray-500 mt-4">Source: Jobvite</p>
                 </div>
             </div>
+            <div class="swiper-slide bg-gray-900 text-white" style="background-image: linear-gradient(to right, #1e3a8a, #10b981);">
+                <div class="slide-content">
+                    <h2 class="text-6xl font-black">Unlocking NIRF Success: The Placement Edge</h2>
+                    <div class="mt-8 text-left max-w-2xl mx-auto space-y-6">
+                        <div class="flex items-start text-xl"><i data-lucide="award" class="w-8 h-8 mr-4 mt-1 text-yellow-300 flex-shrink-0"></i><span><strong>Boosted Graduation Outcomes:</strong> Directly impacts the 'Graduation Outcomes' parameter by improving placement rates and median salary statistics, which are key metrics in NIRF rankings.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="trending-up" class="w-8 h-8 mr-4 mt-1 text-yellow-300 flex-shrink-0"></i><span><strong>Enhanced Employer Perception:</strong> A streamlined process for jobs and referrals builds a strong reputation among top companies, significantly boosting the 'Peer Perception' score.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="users" class="w-8 h-8 mr-4 mt-1 text-yellow-300 flex-shrink-0"></i><span><strong>Attracting Top Talent:</strong> A strong placement and referral system acts as a magnet for high-achieving students, improving the overall quality of intake and contributing to a better 'Teaching, Learning & Resources' score.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="shield-check" class="w-8 h-8 mr-4 mt-1 text-yellow-300 flex-shrink-0"></i><span><strong>Data-Driven Reporting:</strong> The system provides accurate and verifiable data for NIRF submissions, ensuring transparency and credibility, which strengthens the institution's overall profile.</span></div>
+                    </div>
+                </div>
+            </div>
 <!--
             Slide 7: Calculating the Costs: Technology Investment
             <div class="swiper-slide bg-gray-800 text-white">
