--- a/index.html
+++ b/index.html
@@ -227,6 +227,17 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-slide bg-gray-900 text-white" style="background-image: linear-gradient(to right, #0d9488, #2563eb);">
+                <div class="slide-content">
+                    <h2 class="text-6xl font-black">Seamless Campus Integration</h2>
+                    <div class="mt-8 text-left max-w-2xl mx-auto space-y-6">
+                        <div class="flex items-start text-xl"><i data-lucide="layout-dashboard" class="w-8 h-8 mr-4 mt-1 text-orange-300 flex-shrink-0"></i><span><strong>Student Portal & LMS:</strong> Integrate directly into the existing college portal or Learning Management System (LMS) for single sign-on (SSO) access, ensuring high adoption and ease of use.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="link" class="w-8 h-8 mr-4 mt-1 text-orange-300 flex-shrink-0"></i><span><strong>Alumni Network Synergy:</strong> Connects with the official alumni database, allowing for a powerful, streamlined referral process that strengthens alumni engagement and provides students a direct line to industry insiders.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="smartphone" class="w-8 h-8 mr-4 mt-1 text-orange-300 flex-shrink-0"></i><span><strong>Mobile-First Accessibility:</strong> A dedicated mobile app for students and alumni provides instant push notifications for new jobs, application deadlines, and referral requests, ensuring timely engagement.</span></div>
+                        <div class="flex items-start text-xl"><i data-lucide="settings" class="w-8 h-8 mr-4 mt-1 text-orange-300 flex-shrink-0"></i><span><strong>Placement Cell Control:</strong> A powerful administrative dashboard allows the Training & Placement Office (TPO) to manage job postings, track applications in real-time, and generate insightful reports effortlessly.</span></div>
+                    </div>
+                </div>
+            </div>
 <!--
             Slide 7: Calculating the Costs: Technology Investment
             <div class="swiper-slide bg-gray-800 text-white">
