--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <span style="font-style: italic;">"Making student placements faster, smarter, and more connected."</span>
             </p>
             <div class="animated-element" style="margin-top: 60px; font-size: 1.1rem; opacity: 0.8;">
-                <p>Aditya Sharma, Co-founder</p>
+                <p>JobsConfirmed</p>
                 <p>Date: 19th October, 2025</p>
             </div>
         </section>
