--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </div>
                 <div class="content-item">
                     <h3>Email</h3>
-                    <p><a href="mailto:contact.jobsconfirmed@gmail.com" style="color: var(--color-text-light); text-decoration: none;">contact.jobsconfirmed@gmail.com</a></p>
+                    <p><a href="mailto:contacts.jobsconfirmed@gmail.com" style="color: var(--color-text-light); text-decoration: none;">contacts.jobsconfirmed@gmail.com</a></p>
                 </div>
                 <div class="content-item">
                     <h3>Phone</h3>
