Change primary and secondary color variables
Updated primary and secondary color variables in CSS.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         /* --- General Setup & Variables --- */
         :root {
-            --color-primary: #000080; /* Dark Navy Blue */
-            --color-secondary: #007bff; /* A brighter blue for accents */
+            --color-primary: #589AE8; /* Dark Navy Blue */
+            --color-secondary: #FFFFFF; /* A brighter blue for accents */
             --color-text-light: #ffffff; /* White text */
             --color-text-dark: #333333; /* Dark text for contrast */
             --font-family-main: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
