--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             height: 100%;
             overflow: hidden; /* Hide default scrollbar */
             font-family: var(--font-family-main);
-            color: var(--color-text-dark); /* Default text color set to dark for readability */
+            color: var(--color-text-light); /* Default text color set to dark for readability */
             background-color: var(--color-primary);
         }
 
@@ -77,7 +77,7 @@
             max-width: 800px;
             margin: 10px auto;
             line-height: 1.6;
-            color: var(--color-text-dark); /* All body text is dark */
+            color: var(--color-text-light); /* All body text is dark */
         }
         ul {
             list-style: none;
@@ -92,7 +92,7 @@
             border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Darker border */
             position: relative;
             padding-left: 40px;
-            color: var(--color-text-dark); /* List item text is dark */
+            color: var(--color-text-light); /* List item text is dark */
         }
         ul li:last-child {
             border-bottom: none;
@@ -144,7 +144,7 @@
             padding: 30px;
             border-radius: 10px;
             transition: all 0.3s ease;
-            color: var(--color-text-dark); /* Ensure text inside is dark */
+            color: var(--color-text-light); /* Ensure text inside is dark */
         }
         .content-item:hover {
             background-color: rgba(0, 0, 0, 0.1); /* Darker on hover */
