Change text color from dark to light in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             color: var(--color-secondary); /* Headings inside content items */
         }
         .content-item p {
-            color: var(--color-text-dark); /* Paragraphs inside content items */
+            color: var(--color-text-light); /* Paragraphs inside content items */
         }
 
         /* --- Animation (Entrances on scroll) --- */
@@ -183,12 +183,12 @@
             margin-top: 30px;
             border: 2px solid var(--color-secondary);
             max-width: 600px;
-            color: var(--color-text-dark); /* Ensure text inside is dark */
+            color: var(--color-text-light); /* Ensure text inside is dark */
         }
         .pricing-box p {
             font-size: 1.3rem;
             line-height: 1.5;
-            color: var(--color-text-dark);
+            color: var(--color-text-light);
         }
         .pricing-detail {
             font-size: 1.8rem;
@@ -205,10 +205,10 @@
             color: var(--color-text-light); /* Keep main title white for impact */
         }
         #slide-intro p {
-            color: var(--color-text-dark); /* Introductory paragraphs are dark */
+            color: var(--color-text-light); /* Introductory paragraphs are dark */
         }
         #slide-intro .animated-element p {
-            color: var(--color-text-dark); /* Date and co-founder info also dark */
+            color: var(--color-text-light); /* Date and co-founder info also dark */
         }
         
         .animated-element p a {
@@ -219,7 +219,7 @@
             color: #003d80;
         }
         #slide-contact .content-item p a {
-             color: var(--color-text-dark); /* Contact links are dark, for readability on content-item */
+             color: var(--color-text-light); /* Contact links are dark, for readability on content-item */
              text-decoration: none;
         }
         #slide-contact .content-item p a:hover {
