--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* --- General Setup & Variables --- */
         :root {
-            --color-primary: #589AE8; /* Bright Sky Blue */
+            --color-primary: #E1EBF2; /* Bright Sky Blue */
             --color-secondary: #0056b3; /* Darker accent blue for headings/highlights */
             --color-text-dark: #333333; /* Dark text for readability on light background */
             --color-text-light: #ffffff; /* White text, primarily for buttons/dark elements */
@@ -25,7 +25,7 @@
             height: 100%;
             overflow: hidden; /* Hide default scrollbar */
             font-family: var(--font-family-main);
-            color: var(--color-text-light); /* Default text color set to dark for readability */
+            color: var(--color-text-dark); /* Default text color set to dark for readability */
             background-color: var(--color-primary);
         }
 
@@ -61,7 +61,7 @@
         }
         h1 {
             font-size: 3.5rem;
-            color: var(--color-text-light); /* Main title can be white for impact on the blue background */
+            color: var(--color-text-dark); /* Main title can be white for impact on the blue background */
         }
         h2 {
             font-size: 2.5rem;
@@ -77,7 +77,7 @@
             max-width: 800px;
             margin: 10px auto;
             line-height: 1.6;
-            color: var(--color-text-light); /* All body text is dark */
+            color: var(--color-text-dark); /* All body text is dark */
         }
         ul {
             list-style: none;
@@ -92,7 +92,7 @@
             border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Darker border */
             position: relative;
             padding-left: 40px;
-            color: var(--color-text-light); /* List item text is dark */
+            color: var(--color-text-dark); /* List item text is dark */
         }
         ul li:last-child {
             border-bottom: none;
@@ -117,7 +117,7 @@
             padding: 15px 30px;
             margin-top: 30px;
             background-color: var(--color-secondary); /* Button uses darker accent blue */
-            color: var(--color-text-light); /* Button text is white */
+            color: var(--color-text-dark); /* Button text is white */
             text-decoration: none;
             font-size: 1.2rem;
             font-weight: 600;
@@ -144,7 +144,7 @@
             padding: 30px;
             border-radius: 10px;
             transition: all 0.3s ease;
-            color: var(--color-text-light); /* Ensure text inside is dark */
+            color: var(--color-text-dark); /* Ensure text inside is dark */
         }
         .content-item:hover {
             background-color: rgba(0, 0, 0, 0.1); /* Darker on hover */
@@ -154,7 +154,7 @@
             color: var(--color-secondary); /* Headings inside content items */
         }
         .content-item p {
-            color: var(--color-text-light); /* Paragraphs inside content items */
+            color: var(--color-text-dark); /* Paragraphs inside content items */
         }
 
         /* --- Animation (Entrances on scroll) --- */
@@ -183,12 +183,12 @@
             margin-top: 30px;
             border: 2px solid var(--color-secondary);
             max-width: 600px;
-            color: var(--color-text-light); /* Ensure text inside is dark */
+            color: var(--color-text-dark); /* Ensure text inside is dark */
         }
         .pricing-box p {
             font-size: 1.3rem;
             line-height: 1.5;
-            color: var(--color-text-light);
+            color: var(--color-text-dark);
         }
         .pricing-detail {
             font-size: 1.8rem;
@@ -202,13 +202,13 @@
 
         /* Adjustments for specific white text needs (e.g., primary title, or button text) */
         #slide-intro h1 {
-            color: var(--color-text-light); /* Keep main title white for impact */
+            color: var(--color-text-dark); /* Keep main title white for impact */
         }
         #slide-intro p {
-            color: var(--color-text-light); /* Introductory paragraphs are dark */
+            color: var(--color-text-dark); /* Introductory paragraphs are dark */
         }
         #slide-intro .animated-element p {
-            color: var(--color-text-light); /* Date and co-founder info also dark */
+            color: var(--color-text-dark); /* Date and co-founder info also dark */
         }
         
         .animated-element p a {
@@ -219,7 +219,7 @@
             color: #003d80;
         }
         #slide-contact .content-item p a {
-             color: var(--color-text-light); /* Contact links are dark, for readability on content-item */
+             color: var(--color-text-dark); /* Contact links are dark, for readability on content-item */
              text-decoration: none;
         }
         #slide-contact .content-item p a:hover {
@@ -327,7 +327,7 @@
             </div>
 
             <div class="animated-element" style="margin-top: 40px;">
-                <h3 style="color: var(--color-text-light);">Next Steps: Detailed Walkthrough</h3>
+                <h3 style="color: var(--color-text-dark);">Next Steps: Detailed Walkthrough</h3>
                 <p>We would be happy to schedule a detailed walkthrough or demo of the product at your convenience.</p>
                 <a href="#slide-contact" class="cta-button">Schedule a Demo Today</a>
             </div>
