Update background color of content items
Changed background color of content items from a transparent dark to a solid light color.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             max-width: 1200px;
         }
         .content-item {
-            background-color: rgba(0, 0, 0, 0.05); /* Slightly transparent dark background for content items */
+            background-color: #D6DFE6; /* Slightly transparent dark background for content items */
             padding: 30px;
             border-radius: 10px;
             transition: all 0.3s ease;
