Revise description of referral system features

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
                 <div class="content-item">
                     <h3>🔗 Real-World Connection</h3>
-                    <p>Our features, like the referral system, mirror real-world hiring patterns, better preparing students for the corporate environment.</p>
+                    <p>Our features, like the referral system, provide real-life potential referrals, better preparing students for the corporate environment.</p>
                 </div>
                 <div class="content-item">
                     <h3>📊 Data-Driven Decisions</h3>
